feat: make Rescue Room strategy legible
